--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,13 @@
             android:layout_below="@id/button"
             android:layout_height="wrap_content"
             android:freezesText="true" />
+        <Button
+            android:id="@+id/release"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_view"
+            android:text="@string/button_release"
+            android:onClick="release" />
         </RelativeLayout>
 
 </RelativeLayout>
